--- a/LaTeX/diodo.tex
+++ b/LaTeX/diodo.tex
@@ -107,7 +107,7 @@ V_T \ln{\left(\frac{
 \begin{figure}[H]
 	\centering 
  		\includegraphics[scale=0.25]{./confronto_curve.png}
- 	\caption{confronto degli andamenti: la curva si Shokley (in rosso) e la 
+ 	\caption{confronto degli andamenti: la curva di Shockley (in rosso) e la 
 legge \eqref{eq: model} (in viola)}
 \end{figure}
 
@@ -156,34 +156,28 @@ tra le seguenti:
 	    \bottomrule
 	\end{tabular}
 	\caption{I valori delle resistenze poste in serie al diodo, riportate in
-		valore nominale e misurate con multimetri digitali. \label{tab: 
-res}}
+		valore nominale e misurate con multimetri digitali. \label{tab:res}}
     \end{center}
 \end{table}
 Nel circuito può essere individuata una parte che si occupa della carica e 
 scarica controllata del condensatore $C1$, il cui scopo è quello di fornire 
-una 
-tensione che possa essere facilmente regolata e sufficientemente stabile 
+una tensione che possa essere facilmente regolata e sufficientemente stabile 
 durante un impulso. Un'altra parte del circuito si occupa di collegare a 
 comando il condensatore alla serie $R1-D1$ attraverso un MOS-FET.\\
 Il circuito è alimentato da 2 tensioni fornite da un alimentatore stabilizzato 
 switching e da un Buck Boost Converter. Un segnale fornito su $T2$ provoca la 
 carica del condensatore mentre su $T3$ la sua scarica. Un segnale (invertito) 
-su 
-$T1$ innesca l'impulso di corrente sul diodo.\\
+su $T1$ innesca l'impulso di corrente sul diodo.\\
 La tensione di C$1$ è misurata attraverso un partitore di tensione collegato 
-ad 
-\verb+OUT3+ ed alla scheda di controllo, mentre la tensione ai punti 
-\verb+OUT1+ e
-\verb+OUT2+ è letta direttamente.\\
+ad \verb+OUT3+ ed alla scheda di controllo, mentre la tensione ai punti
+\verb+OUT1+ e \verb+OUT2+ è letta direttamente.\\
 Come MCU per la gestione dell'apparato è stata scelta la scheda 
 \verb+Teensy 3.2+\cite{teensy}. Questa si occupa del controllo dei segnali e 
-delle letture 
-analogiche. In particolare \verb+Teensy+  permette la lettura analogica 
-sincronizzata differenziale veloce, essendo dotato di due ADC, entrambi con una 
-risoluzione reale di 12 bit. La lettura differenziale è fondamentale per 
-acquisire coppie di dati per le tensioni ai capi del diodo e della 
-resistenza.
+delle letture analogiche. In particolare \verb+Teensy+ permette la lettura
+analogica sincronizzata differenziale veloce, essendo dotato di due ADC,
+entrambi con una risoluzione reale di 12 bit. La lettura differenziale è
+fondamentale per acquisire coppie di dati per le tensioni ai capi del diodo
+e della resistenza.
 
 \begin{figure}[H]
 	\centering 
@@ -194,7 +188,7 @@ resistenza.
 	\centering 
  		\includegraphics[scale=0.5]{./measure.png}
  	\caption{Schema circuitale del sistema di lettura (verso 
-\texttt{Teensy})
+	\texttt{Teensy})
 	\label{sch:rdng}}
 \end{figure}
 
@@ -216,26 +210,26 @@ invece collegati a massa.
 Variando la resistenza e conseguentemente la differenza di potenziale in 
 ingresso, è stato possibile calcolare la media, la deviazione standard 
 campione e la deviazione standard dalla media relative a ciascuna tensione per 
-un gruppo di 10000 misure effettuate con Teensy (vedi 
+un gruppo di 10000 misure effettuate con \verb+Teensy+ (vedi 
 \href{https://github.com/LucaCiucci/relaz_seme/blob/master/sketches/teensy_calib
 /teensy_calib.ino}{relativo programma}). Il centrale del potenziometro e la 
 massa sono state, inoltre, collegate ad un multimetro digitale, così da avere 
-il rispettivo valore in volt per ciascuna tensione valutata in unità 
+il rispettivo valore in Volt per ciascuna tensione valutata in unità 
 arbitrarie. Sono stati, quindi, associati degli errori a queste ultime misure  
 tenendo presente le specifiche del multimetro.
 
 Dopodiché le misure relative a ciascuna coppia di boccole sono state poste 
-all’interno di un grafico con i dati raccolti da Teensy in ordinate e i 
+all’interno di un grafico con i dati raccolti da \verb+Teensy+ in ordinate e i 
 valori misurati col multimetro in ascisse. Dunque è stato effettuato un fit 
 lineare attraverso la legge:
 
 \begin{equation}
-y(x, m, q)  = m \cdot x + q
+y(x, m, q)  = m x + q
 \end{equation}
 
-ove a e b sono i parametri liberi. Come errori associati alle letture digitali 
-sono state utilizzate le deviazioni standard dalla media. I fit relativi ad 
-\verb+ADC0+ ed \verb+ADC1+ hanno conseguito i seguenti risultati:
+ove $a$ e $b$ sono i parametri liberi. Come errori associati alle letture
+digitali sono state utilizzate le deviazioni standard dalla media. I fit
+relativi ad \verb+ADC0+ ed \verb+ADC1+ hanno conseguito i seguenti risultati:
 \begin{align*}
 	&\qquad \texttt{ADC0}	&&\qquad  \texttt{ADC1} \\
 	m_0 &= 0.7968 \pm  0.0033  \; \mathrm{mV/digit} 
@@ -272,7 +266,7 @@ dei valori centrali relativi alla misura in volt delle letture analogiche
 (digit). Il $\chi^2$ risulta essere sovrastimato in quanto il MCU non ci 
 fornisce una risposta perfettamente lineare ai segnali in ingresso. Dalle 
 specifiche di \verb+Teensy 3.2+, sappiamo che lo scostamento dall’andamento lineare 
-può essere quantificato col 7 $\%$ della lettura in digit.\newline
+può essere quantificato col $7 \%$ della lettura in digit.\newline
 Per maggiori informazioni riguardo alle stime delle incertezze nelle 
 conversioni si rimanda direttamente al 
 \href{https://github.com/LucaCiucci/relaz_seme/blob/master/Cartella_fit/funzioni
@@ -283,23 +277,20 @@ conversioni si rimanda direttamente al
 %================================
 \subsection{Acquisizione dati}
 Per ciascun valore scelto della resistenza $R1$ è stata eseguita una presa 
-dati 
-automatizzata secondo una 
+dati automatizzata secondo una 
 \href{https://github.com/LucaCiucci/relaz_seme/blob/master/sketches/teensy_diffe
 renziale_definitivo/teensy_differenziale_definitivo.ino}{routine} programmata 
-in \verb+Teensy+: il condensatore 
-viene caricato ad una tensione prefissata; una volta raggiunto il valore 
-prestabilito viene inviato il segnale su $T1$, si avvia l'acquisizione 
-sincronizzata e si attende un tempo 50 $\mu$s per permettere al MOS-FET di 
-entrare in conduzione ($R2$ è stata scelta di 1k, dunque c'è un apprezzabile 
-ritardo tra segnale e impulso) e scartare eventuali segnali spuri; a questo 
-punto si inizia a memorizzare una serie da 100 coppie di letture 
--sincronizzate- (a meno di sfasamenti nell'ordine delle centinaia di 
+in \verb+Teensy+: il condensatore viene caricato ad una tensione prefissata;
+una volta raggiunto il valore prestabilito viene inviato il segnale su $T1$,
+si avvia l'acquisizione sincronizzata e si attende un tempo 50 $\mu$s per
+permettere al MOS-FET di entrare in conduzione ($R2$ è stata scelta di 1k,
+dunque c'è un apprezzabile ritardo tra segnale e impulso) e scartare eventuali
+segnali spuri; a questo punto si inizia a memorizzare una serie da 100 coppie
+di letture -sincronizzate- (a meno di sfasamenti nell'ordine delle centinaia di 
 nanosecondi); si ferma l'impulso e si trasmettono i dati al computer; se la 
 tensione al punto \verb+OUT2+ ha raggiunto valori maggiori di 3.3V 
-l'acquisizione si ferma
-per non danneggiare \verb+Teensy+, altrimenti si ricomincia caricando il
-condensatore ad una tensione più alta.
+l'acquisizione si ferma per non danneggiare \verb+Teensy+, altrimenti si
+ricomincia caricando il condensatore ad una tensione più alta.
 
 %================================================================
 %                   Analisi dati e Risultati
@@ -312,12 +303,11 @@ nelle opportune coppie corrente-tensione relative al diodo. Dunque i dati sono
 stati convertiti in tensione secondo le calibrazioni dei relativi canali (
 \verb+ADC0+ e \verb+ADC1+). Tale operazione è stata effettuata considerando
 opportunamente gli errori come descritto nel paragrafo \ref{sec: cal}.
-Successivamente, le tensioni 
-relative ai capi della resistenza $R$ hanno permesso di stimare la rispettiva 
-corrente di lavoro attraverso la legge di Ohm. 
+Successivamente, le tensioni relative ai capi della resistenza $R$ hanno
+permesso di stimare la rispettiva corrente di lavoro attraverso la legge di Ohm. 
 Si è quindi effettuato un filtraggio volto all'eliminazione degli outliers e 
 dei punti meno significativi, assumendoli quali variabili indipendenti e di 
-natura gaussiana. Per una discussione dettagliata si rimanda all' \nameref{app: 
+natura gaussiana. Per una discussione dettagliata si rimanda all'\nameref{app: 
 A}. E’ necessario sottolineare che, all’interno della stessa appendice, 
 $\sigma_x$ rappresenta la varianza delle letture e non gli errori associati ad 
 esse.
@@ -327,14 +317,14 @@ direttamente. Tuttavia ciò comporterebbe il fallimento del fit a causa dei
 valori negativi o nulli che si riscontrerebbero nell’argomento del logaritmo. 
 \`E stata quindi utilizzata la funzione inversa come modello di fit, la quale 
 è stata ricavata numericamente secondo il metodo delle tangenti (o di Newton). 
-Per una trattazione approfondita, si rimanda all' \nameref{app: B}.
+Per una trattazione approfondita, si rimanda all'\nameref{app: B}.
 
 
 I dati raccolti con sovrapposta la funzione di fit sono stati posti all'interno 
 del grafico \ref{fig: sck_lin}.
 I parametri stimati dal fit risultano essere:
 \begin{align*}
-	R_{diodo} &= 47.549 \pm 0.018 \; \rm m\Omega \\
+	R_{\text{diodo}} &= 47.549 \pm 0.018 \; \rm m\Omega \\
 	\eta V_T &= 46.3879 \pm 0.0065 \; \rm mV \\
 	I_0 &= (3.1024 \pm 0.0055) \cdot 10^{-12} \; \rm nA \\
 	offset &=\; - 0.9146\pm 0.0031\rm A\\
@@ -354,8 +344,8 @@ stato rappresentato un punto ogni 100 per comodità di visualizzazione.}
 	\centering 
  		\includegraphics[scale=0.6]{./Figure_3_1_Nskip_10.png}
 	\caption{Dati acquisiti e funzione di best fit \eqref{eq: model} in 
-scala semilogaritmica. E' stato rappresentato un punto ogni 10 per comodità di 
-visualizzazione.}
+	scala semilogaritmica. E' stato rappresentato un punto ogni 10 per comodità di 
+	visualizzazione.}
 \end{figure}
 
 Per gli script si rimanda alla 
@@ -370,17 +360,15 @@ i parametri fondamentali.
 L'andamento dei dati sperimentali non risulta essere ben descritto dalla legge
 \eqref{eq: model}. Ciò può essere spiegato sulla base della non linearità dei
 convertitori analogici digitali all'interno di \verb+Teensy 3.2+. Tale 
-condizione ha omportato
-degli errori difficilmente stimabili e presumibilmente correlati. Tuttavia si
-riscontrano delle analogie tra la funzione di fit ed i dati ottenuti. In
-particolare, dal grafico in scala lineare, si osserva che a correnti alte
-l'andamento risulta essere pressoch\`e lineare, in accordo con l'ipotesi sulla
-componente resistiva interna. Dal grafico in scala semilogaritmica, inoltre, 
-osserviamo
-che i dati risultano possedere un andamento simile a quello caratteristico 
-della curva di Shockley, ovvero approssimativamente rettilineo, per poi 
-appiattirsi come un logaritmo al crescere
-della tensione.
+condizione ha comportato degli errori difficilmente stimabili e presumibilmente
+correlati. Tuttavia si riscontrano delle analogie tra la funzione di fit ed i
+dati ottenuti. In particolare, dal grafico in scala lineare, si osserva che
+a correnti alte l'andamento risulta essere pressoch\`e lineare, in accordo con
+l'ipotesi sulla componente resistiva interna. Dal grafico in scala
+semilogaritmica, inoltre, osserviamo che i dati risultano possedere un
+andamento simile a quello caratteristico della curva di Shockley, ovvero
+approssimativamente rettilineo, per poi appiattirsi come un logaritmo al
+crescere della tensione.
 Pertanto potremo aspettarci che i parametri stimati dal fit siano significativi 
 e che la modellizzazione proposta sia una buona approssimazione del diodo reale 
 nelle condizioni di lavoro considerate.
@@ -503,7 +491,7 @@ Effettivamente quello che stiamo facendo non è molto diverso da un stima
 di densità di kernel monovariante, dove però nel nostro caso
 riscaliamo la stima in base al valore assunto da $y$.
 Lo stesso ragionamento vale per $\sigma_y^2$, si ha una stima della varianza
-dei dati la variare di y, pesata sulla distanza dai valori studiati. Dunque
+dei dati la variare di $y$, pesata sulla distanza dai valori studiati. Dunque
 $\mu_y \pm \sigma_y$ ci dà una stima della distribuzione dei nostri dati.
 
 %================================
@@ -512,7 +500,7 @@ $\mu_y \pm \sigma_y$ ci dà una stima della distribuzione dei nostri dati.
 \subsection{$\var{\mu_y}$}
 Mentre $\sigma_y$ rappresenta la distribuzione dei dati intorno al valor medio 
 $\mu_y$, $\var{\mu_y}$ ci dà un'idea dell’incertezza che attribuiamo alla
-miglior stima di y. Questo ci è utile per determinare la convergenza della
+miglior stima di $y$. Questo ci è utile per determinare la convergenza della
 stima in funzione dei dati acquisiti.
 Infatti: più la densità dei dati è grande rispetto alla deviazione standard
 $\sigma_x$, più la stima del valore centrale risulta precisa. Graficamente
@@ -545,7 +533,7 @@ convergenza/divergenza della precisione sulla stima centrale fornita.
 \subsection{Filtro outliers}
 La parte più semplice nel filtraggio dati consiste nello scartare tutti quei
 punti che distano da $\mu_y$ più di una soglia arbitraria $k$ di deviazioni
-standard $\sigma_y$ (nel nostro caso è stato scelto k = 2, non critico,
+standard $\sigma_y$ (nel nostro caso è stato scelto $k = 2$, non critico,
 trovato dopo una serie di prove). A differenza del classico metodo basato
 sulla distanza della curva modello di best fit, non siamo influenzati da
 quest’ultimo. Questo risulta particolarmente utile in simili situazioni di
@@ -572,7 +560,7 @@ Per capire se in un certo punto i dati di $A$ sono significativi, calcoliamo
 la misura di significatività che abbiamo sviluppato in \eqref{aln: varmuy}$:
 \var{\mu_y}$ di $A$ e di $B$. Perciò se $\var{\mu_y}$ di $A$ è maggiore di 
 $q\var{\mu_y}$ di $B$, con $q$ arbitrario (nell’esperienza è stato scelto
-q = 3), questo indica che i dati di $A$
+$q = 3$), questo indica che i dati di $A$
 ci stanno dando meno informazioni rispetto a quelli di $B$. A questo punto
 è sufficiente controllare tutti i punti scorrendo su tutte le combinazioni
 di set per eliminare i dati non significativi, che rendono meno
@@ -581,7 +569,7 @@ logaritmica sulle $y$ dove i punti con grandi incertezze o varianze tendono
 a disperdersi rapidamente.
 L’algoritmo è computazionalmente intensivo e richiede una corretta gestione
 della memoria per evitare bolle di allocazione, dunque è stato implementato
-in C++ per praticità e richiamato all’interno degli script, per dettagli si 
+in \verb'C++' per praticità e richiamato all’interno degli script, per dettagli si 
 rimanda ai 
 \href{https://github.com/LucaCiucci/relaz_seme/tree/master/Cartella_fit/filter_s
 rc}{sorgenti}.
@@ -620,28 +608,29 @@ Per praticità è stato rappresentato un centesiomo dei dati raccolti}
 %                        Appendice B
 %================================================================
 \section{Appendice B: Metodo di fit}\label{app: B}
-La differenza di potenziale $\Delta$V in funzione della corrente I che scorre 
-all’interno del diodo può essere espressa attraverso la legge 2. Potremo, 
-dunque, essere tentati ad adottare tale formula ai fini di un fit numerico. 
+La differenza di potenziale $\Delta$V in funzione della corrente $I$ che scorre 
+all’interno del diodo può essere espressa attraverso la legge
+\eqref{eq: model}. Potremo, dunque, essere tentati ad adottare tale formula
+ai fini di un fit numerico. 
 Tuttavia tale operazione provocherebbe il fallimento del fit a causa dei valori 
 negativi o nulli che debitamente si riscontreranno all’interno del logaritmo. 
 E’ stato dunque necessario adottare un algoritmo alternativo, basato sul 
 metodo di Newton\cite{tesi}. Esso ci consentirà di ricostruire numericamente 
-la funzione inversa della legge 2.
-Illustriamo in breve il metodo di Newton. Sia data una funzione f(x) continua e 
-derivabile entro un intervallo di definizione connesso (con f’(x) limitata e 
-diversa da 0 per ciascuna x appartenente al dominio) ed una v tale che f(v) = 
-0. Sviluppando al prim’ordine f in un intorno di v, otterremo:
+la funzione inversa della legge \eqref{eq: model}.
+Illustriamo in breve il metodo di Newton. Sia data una funzione $f(x)$ continua e 
+derivabile entro un intervallo di definizione connesso (con $f’(x)$ limitata e 
+diversa da $0$ per ciascuna $x$ appartenente al dominio) ed una $v$ tale che
+$f(v) = 0$. Sviluppando al prim’ordine f in un intorno di v, otterremo:
 \begin{equation}
 f(x) = f(v) + f{'}(v) + {\frac{1}{2}} {f{''}(X)} \cdot  {( x - v)^2} = 0
 \end{equation}
-ove X è un numero reale compreso fra v ed x. Nel caso in cui il $(x-v)^2 
+ove $X$ è un numero reale compreso fra $v$ ed $x$. Nel caso in cui il $(x-v)^2 
 $risultasse prossimo a zero:
 \begin{equation}
 x \simeq v   -  {\frac {f(v)}{f’(v)}}
 \end{equation}
-L’unica limitazione nell’adottare tale scrittura è che necessitiamo di v 
-molto vicino a x incognito. Tuttavia, nel caso in cui la funzione f risultasse 
+L’unica limitazione nell’adottare tale scrittura è che necessitiamo di $v$ 
+molto vicino a $x$ incognito. Tuttavia, nel caso in cui la funzione $f$ risultasse 
 sufficientemente maneggevole, potremo partire da un valore generico del dominio 
 e riscontrare con buona approssimazione la radice in un tempo finito 
 relativamente breve. Per effettuare ciò, è necessaria la serie ricorsiva:
@@ -651,16 +640,16 @@ x[0] = a \\ x[N+1] = x[N] - \frac {f(x[N])} {f’(x[N])}
 \end{cases}
 \end{equation}
 ove a è un generico valore appartenente al dominio di definizione. In pratica, 
-per ogni iterazione tale serie valuta f(x[i]) e cerca la retta tangente in tale 
+per ogni iterazione tale serie valuta $f(x[i])$ e cerca la retta tangente in tale 
 punto alla funzione:
 \begin{equation}
 y = f(x[i]) + f’(x[i]) \cdot (x-x[i])
 \end{equation}
- Dopodiché cerca il punto x per il quale y = 0:
+ Dopodiché cerca il punto $x$ per il quale $y = 0$:
 \begin{equation}
 x = x[i+1] = x[i] - \frac{f(x[i])}{f’([i])}
 \end{equation}
-E viene conseguentemente valutato il valore f(x[i+1]) ed il procedimento viene 
+E viene conseguentemente valutato il valore $f(x[i+1])$ ed il procedimento viene 
 ripetuto per un dato numero di iterazioni. 
 \begin{figure}[H]
 	\centering 
@@ -668,12 +657,12 @@ ripetuto per un dato numero di iterazioni.
 	\caption{Visualizzazione grafica di cosa implica un’iterazione della 
 serie ricorsiva (f(x) = $x^3$ in questo esempio)}
 \end{figure}
-Se la funzione è monotona e la serie converge ad un valore, tale sarà v, 
+Se la funzione è monotona e la serie converge ad un valore, tale sarà $v$, 
 essendo l’unico punto fisso della serie:
 \begin{equation}
  {a = a -  {\frac{f(a)}{f{’}(a)}}}\to{{f(a) = 0}\land{v = a}}
 \end{equation}
-essendo v l’unico punto in cui si annulla la funzione per definizione.
+essendo $v$ l’unico punto in cui si annulla la funzione per definizione.
 Ritornando al diodo, esso può essere interpretato quale un diodo ideale ed una 
 resistenza in serie, collegati ad un generatore di differenza di potenziale. 
 Quindi, per la legge delle maglie:
@@ -681,39 +670,39 @@ Quindi, per la legge delle maglie:
 \Delta V_{\text{ingresso}} = \Delta V_{\text{diodo}} + \Delta 
 V_{\text{resistenza}} = \Delta V_{\text{diodo}} + R \cdot I
 \end{equation}
-ove I è la corrente che scorre all’interno del diodo in quel determinato 
+ove $I$ è la corrente che scorre all’interno del diodo in quel determinato 
 istante. Notoriamente, tale scrittura si può porre nella seguente forma ai 
 fini di definire la retta di carico del diodo:
 \begin{equation}
 \Delta V_{\text{diodo}} = \Delta V_{\text{ingresso}} - R \cdot I
 \end{equation}
 Il punto di intersezione di tale retta con l’equazione di Shockley per il 
-diodo rappresenta il punto di lavoro (v, i) del diodo:
+diodo rappresenta il punto di lavoro $(v, i)$ del diodo:
 \begin{equation}
 i = I_0 \cdot ( e^{\frac {\Delta V_{\text{ingresso}} - R \cdot i}{\eta V_T} } - 
 1) = I_0 \cdot (e^{\frac{v} {\eta V_T}} -1) =  \frac{\Delta V_{\text{ingresso}} 
 - v}{R}
 \end{equation}
 Tale i dovrà necessariamente corrispondere alla corrente di lavoro in virtù 
-dell’equazione di Shockley. Dunque definendo la funzione g(x) come segue:
+dell’equazione di Shockley. Dunque definendo la funzione $g(x)$ come segue:
 \begin{equation}\label{eq: invsck}
 g(x) = I_0 \cdot ( e^{\frac{x}{\eta V_T}} - 1)  - \frac {\Delta 
 V_{\text{ingresso}} - x}{R}
 \end{equation}
-è possibile adottare il metodo di Newton al fine di riscontrare la radice v ed 
-individuare così la corrente di lavoro. 
-Dunque s potrà effettuare un fit della corrente in funzione della tensione ai 
+è possibile adottare il metodo di Newton al fine di riscontrare la radice $v$
+ed individuare così la corrente di lavoro. 
+Dunque si potrà effettuare un fit della corrente in funzione della tensione ai 
 capi del diodo reale attraverso una legge che per un determinato valore della 
 tensione ($\Delta V_{\text{ingresso}}$) ed un dato numero di iterazioni (ne 
 sono sufficienti poche nel nostro caso ai fini di ottenere un’approssimazione 
-adeguata), riesce ad individuare la radice v  nelle modalità previamente 
+adeguata), riesce ad individuare la radice $v$ nelle modalità previamente 
 descritte. Attraverso la stessa, sarà quindi possibile individuare la corrente 
 di lavoro del diodo per la suddetta $\Delta V_{\text{ingresso}}$. 
-E’ immediato comprendere che fare un fit con questa legge risulta essere 
-equivalente a fare un fit con la legge 2, con minori complicazioni 
+\`E immediato comprendere che fare un fit con questa legge risulta essere 
+equivalente a fare un fit con la legge \eqref{eq: model}, con minori complicazioni 
 computazionali. Verifichiamo graficamente che per dei generici valori della 
 corrente  i due metodi danno risultati sostanzialmente equivalenti (adottiamo i 
-parametri stimati dal fit). I grafici relativi alla convergenza di v e di I 
+parametri stimati dal fit). I grafici relativi alla convergenza di $v$ e di $I$ 
 anche a seguito di sole 20 iterazioni:
 \begin{figure}[H]
 	\centering 
@@ -725,12 +714,12 @@ anche a seguito di sole 20 iterazioni:
 \end{figure}
 
 Tali grafici evidenziano che, come era da aspettarsi, la legge adottata per il 
-fit risulta essere l’inversa numerica della legge 2. La serie, inoltre, 
+fit risulta essere l’inversa numerica della legge \eqref{eq: model}. La serie, inoltre, 
 risulta convergere molto rapidamente ai valori attesi e quindi sono 
 effettivamente sufficienti solo 20 iterazioni per una buona precisione.
 All’interno della funzione di fit, è stato infine introdotto un offset quale 
 parametro libero per ovviare errori di zero dovuti agli assorbimenti di ADC in 
-Teensy 3.2.
+\verb+Teensy 3.2+.
 
 %================================================================
 %                            END
